--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,11 +1,6 @@
 /*Estilos da página index.html*/
-* {
-    margin: 0;
-    padding: 0;
-}
 
 body {
-    background-color:#3d3d3d;
     font-family: Georgia, 'Times New Roman';
 }
 
@@ -41,7 +36,7 @@ body {
 
 /*hover -  altera a cor do texto quando o cursor do mouse passar por cima*/
 #menu li a:hover { 
-    color: #b33939;
+    color: #c0392b;
 }
 
 .p-40 {
@@ -71,10 +66,11 @@ body {
 
 .ml-50 {
     margin-left: 50px;
+    margin-top: 30px;
 }
 
 button {
-    padding: 5px;
-    background-color: #b33939;
+    padding: 10px 15px;
+    background-color: #A9A9A9;
     border-radius: 5px;
 }
